--- a/index.html
+++ b/index.html
@@ -74,22 +74,19 @@
         </div>
 
         <!-- Initialing for Score -->
-        <form>
-            <div class="form-group row">
-                <label class="col-sm-3 col-form-label"><h5>Initial Here!</h5></label>
-                <div class="col-sm-3">
-                    <input type="text" readonly class="form-control-plaintext" id="user-initial"
-                        value="AHT">
-                </div>
-                <button type="submit" class="col-sm-6 initBtn">Submit</button>
+        <div class="row">
+            <div class="col-sm-3">
+                <input type="text" id="user-initials" placeholder="enter initals">
             </div>
-        </form>
-    </div>
+            <button class="col-sm-6 btn" id="score-submit">Submit</button>
+        </div>
 
 
 
-    <!-- Javascript -->
-    <script src="./assets/script.js"></script>
+
+
+        <!-- Javascript -->
+        <script src="./assets/script.js"></script>
 </body>
 
 </html>
