updating High Score

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
             <div class="col-sm-5">
                 <input type="text" id="user-initials" placeholder="enter your initials">
             </div>
-            <button class="col-sm-6 btn" id="score-submit">Submit</button>
+            <button class="col-sm-6 btn" id="initials-submit">Submit</button>
         </div>
     </div>
 
     <!--High Score Div -->
-    <div class="container rounded" id="high-score">
+    <div class="container rounded" id="high-score-screen">
 
         <!-- Title -->
         <header>
@@ -95,8 +95,8 @@
         </header>
 
         <!-- log of high scores -->
-        <div class="final-score">
-        </div>
+        <ol class="final-score">
+        </ol>
 
         <!-- Initialing for Score -->
         <div class="row">
